--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -15,13 +15,13 @@
   border-bottom: 1px solid lightgray;
 }
 .btn{
-  width: 90%;
+  width: 340px;
   cursor: pointer;
   border-radius: 4px;
   margin-top:20px;
 }
 .btn1{
-  width: 40%;
+  width: 340px;
   cursor: pointer;
   border-radius: 4px;
   margin-top:20px;
